--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 92vh;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
